--- a/package.json
+++ b/package.json
@@ -6,27 +6,17 @@
   "author": "Josh Batley <jbatley12@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "storybook": "start-storybook -p 9009 -s React",
-    "build-storybook": "build-storybook -s React",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build",
     "test": "jest"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.8",
-    "@storybook/addon-backgrounds": "^3.4.8",
-    "@storybook/addon-links": "^3.4.8",
-    "@storybook/addons": "^3.4.8",
-    "@storybook/react": "^3.4.8",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-jest": "^23.4.2",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-react-app": "^3.1.2",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "^6.26.0",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "docz": "^0.12.12",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.2.0",
@@ -41,10 +31,9 @@
     "jest": "^23.4.2"
   },
   "dependencies": {
-    "prop-types": "^15.6.2",
+    "docz-plugin-css": "^0.11.0",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "styled-components": "^3.4.0"
+    "react-dom": "^16.4.2"
   },
   "jest": {
     "testEnvironment": "node"
